--- a/css/style.scss
+++ b/css/style.scss
@@ -550,6 +550,7 @@
                 line-height: 1.5;
                 letter-spacing: 1px;
                 word-spacing: 1px;
+                font-size: 1em;
             }
         }
        .Service_content{
@@ -674,7 +675,7 @@
             justify-content: $between;
             .Abt_cmn01{
                 h2{
-                    font-size: 3.2em;
+                    font-size:1.6em;//2.2em;
                     letter-spacing: 1px;
                     word-spacing: 1px;
                     line-height: 1.5;
@@ -685,14 +686,14 @@
                     }
                 }
                 p{
-                font-size: 1.1em;
+                font-size: 1em;
                 letter-spacing: 1px;
                 word-spacing: 1px;
                 line-height: 1.8;
-                padding: 1rem 0;
+                padding: .5rem 0;
                 }
                 a{
-                    font-size: 1em;
+                    font-size: 1em; 
                     padding: .8rem 1.9rem;
                     border-radius: 5px;
                     display: inline-block;
@@ -714,7 +715,7 @@
             .Abt_right{
                 width: 30%;
                 img{
-                    max-width: 85%;
+                    max-width: 100%;
                 }
             }
         }
@@ -1092,6 +1093,7 @@
                 font-family: 'open-sans';
                }
            }
+           .Ft03{display: none;}
            .Ft_cmn01{
               h2{
                   font-size: 1.6em;
@@ -1212,13 +1214,29 @@
            .copy_content{
                @include flex;
                justify-content: $between;
-               p{
-                   font-size: 13px;
-                   line-height: 1px;
-                   letter-spacing: 1px;
-                   word-spacing: 1px;
-                   text-transform: $cap;
+               .Ca2{
+                   text-align: right;
+               }
+               .Copycmn{
+                   width: 48%;
                    color: $white;
+                   p,a{
+                    font-size: 13px;
+                    line-height: 1.5;
+                    letter-spacing: 1px;
+                    word-spacing: 1px;
+                    text-transform: $cap;
+                    color: $white;
+                   }
+                   a{
+                       color: #fff;
+                       transition: $transition;
+                       &:hover{
+                           transition: $transition;
+                           opacity: .77;
+                           text-decoration: underline;
+                       }
+                   }
                }
            }
        }
@@ -2567,6 +2585,9 @@
             }
          }
      }
+     .Apt_heading {
+        text-align: center;
+    }
 }
  
 // -------*******---- Contact_US_Wrapper-------*********----end---here-----------//
@@ -2681,6 +2702,23 @@
         }
     }
 }
+// mapp 
+
+.map{
+    width: 401px;
+    height: 296px;
+    overflow: hidden; 
+    border-radius: 5px;
+    box-shadow: 0 0 8px 1px #0000003d; 
+    animation: imganime 3s linear infinite;
+}
+.gm-control-active>img {  
+    filter: brightness(0.5)!important;
+}
+// ----
+
+
+
 
 .main-bar{
     display: none;
