--- a/css/media.css
+++ b/css/media.css
@@ -343,7 +343,8 @@
     padding: 1rem 0 1rem !important;
   }
   main .About_Wrapper::before {
-    width: 54%;
+    width: 80%;
+    height: 84%;
   }
   main header .top-social-bar .child-wrp .L_cmn01 p {
     font-size: 15px;
@@ -735,6 +736,9 @@
     width: 100%;
     height: 100%;
   }
+  .Ca2 {
+    text-align: center !important;
+  }
   header .top-social-bar .child-wrp {
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
@@ -877,7 +881,8 @@
     padding: 3rem 0 0;
   }
   main .About_Wrapper::before {
-    width: 65%;
+    width: 100%;
+    height: 72%;
   }
   main .Appointment_Form_wrp .Form_wrp form {
     width: 94%;
@@ -1115,9 +1120,31 @@
   .breadcrumb {
     display: none !important;
   }
+  main footer .copyright_wrp .copy_content {
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    text-align: center;
+  }
+  main footer .copyright_wrp .copy_content .Copycmn {
+    width: 100%;
+    color: #fff;
+    padding: .5rem 0;
+  }
+  main footer .copyright_wrp {
+    padding: .5rem 0 .3rem;
+    margin: 3rem 0 0;
+  }
 }
 
 @media only screen and (max-width: 576px) {
+  main footer .copyright_wrp .copy_content p {
+    margin: .3rem 0;
+    padding: .0rem 0;
+  }
+  main footer .copyright_wrp .copy_content .Copycmn {
+    padding: 0rem 0;
+  }
   .Slimming_Wrapper .breadcumb-wrp {
     display: block;
   }
@@ -1198,6 +1225,10 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
   main .About_Wrapper .About_Content .Abt_left {
     width: 100%;
@@ -1216,6 +1247,7 @@
   }
   main .Service_wrapper .Service_heading p {
     font-size: 14px;
+    width: 100%;
   }
   main .About_Wrapper .About_Content .Abt_left {
     width: 100%;
@@ -1223,18 +1255,19 @@
   }
   main .About_Wrapper::before {
     width: 100%;
-    height: 67%;
+    height: 42%;
   }
   main .About_Wrapper .About_Content .Abt_right {
     width: 100%;
     text-align: center;
   }
   main .About_Wrapper .About_Content .Abt_right img {
-    max-width: 48%;
+    max-width: 59%;
+    padding: 0 0 .5rem;
   }
   main .About_Wrapper .About_Content .Abt_right {
     width: 100%;
-    padding: 2rem 0 0;
+    padding: 0rem 0 0;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure {
     width: 100%;
@@ -1294,12 +1327,6 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-  main footer .copyright_wrp .copy_content p {
-    width: 100%;
-    text-align: center;
-    margin: .5rem 0;
-    padding: .5rem 0;
   }
   main footer .copyright_wrp {
     padding: 0.5rem 0;
@@ -1634,9 +1661,33 @@
   .chat_img img {
     width: 29%;
   }
+  .map {
+    width: 254px;
+    height: 228px;
+    margin: 1rem 0 0;
+  }
+  div#map iframe {
+    width: 254px !important;
+    height: 228px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .map {
+    width: 100%;
+    height: 228px;
+    margin: 1rem 0 0;
+  }
+  div#map iframe {
+    width: 100% !important;
+    height: 228px;
+  }
+  .gm-control-active > img {
+    width: 14px !important;
+    height: 14px !important;
+    -webkit-filter: brightness(0.5);
+            filter: brightness(0.5);
+  }
   header .Nav-wrp {
     width: 100%;
     position: relative;
@@ -1725,7 +1776,7 @@
     font-size: 1.5em;
   }
   main .About_Wrapper::before {
-    height: 61%;
+    height: 34%;
   }
   main .Appointment_Wrapper {
     padding: 0.5rem 0;
@@ -2072,7 +2123,7 @@
     font-size: 1.4em;
   }
   main .About_Wrapper::before {
-    height: 44%;
+    height: 22%;
     left: -111px;
     top: -93px;
   }
