--- a/css/media.scss
+++ b/css/media.scss
@@ -350,7 +350,8 @@
     }
     
     main .About_Wrapper::before { 
-        width: 54%; 
+        width: 80%;
+        height: 84%; 
     }
     main header .top-social-bar .child-wrp .L_cmn01 p {
       font-size: 15px; 
@@ -757,6 +758,9 @@
     header .Nav-wrp nav .nav-item .Unorder_wrp .drop_down li{
         a{width: 100%;height: 100%;}
     }
+    .Ca2{
+        text-align: center!important;
+    }
     header .top-social-bar .child-wrp{
         justify-content: center!important;
         text-align: center;
@@ -891,7 +895,8 @@
         padding: 3rem 0 0;
     }
     main .About_Wrapper::before {
-        width: 65%;
+        width: 100%;
+        height: 72%;
     }
     main .Appointment_Form_wrp .Form_wrp form {
         width: 94%;
@@ -1137,9 +1142,31 @@
     .breadcrumb{
         display: $none!important;
     }
+    // ----foooter---copyyyy--right--
+    main footer .copyright_wrp .copy_content{
+        justify-content: center!important;
+        text-align: center;
+    }
+    main footer .copyright_wrp .copy_content .Copycmn {
+        width: 100%;
+        color: #fff;
+        padding: .5rem 0;
+    }
+    main footer .copyright_wrp {
+        padding: .5rem 0 .3rem;
+        margin: 3rem 0 0; 
+    }
 }
 
 @media only screen and (max-width: 576px){
+    main footer .copyright_wrp .copy_content p { 
+        margin: .3rem 0;
+        padding: .0rem 0;
+    }
+    main footer .copyright_wrp .copy_content .Copycmn { 
+        padding: 0rem 0;
+    }
+
     .Slimming_Wrapper .breadcumb-wrp{
         display: block;
         .ul1{width: 100%!important;text-align: justify;}
@@ -1212,6 +1239,7 @@
     }
     main .About_Wrapper .About_Content { 
         justify-content: center;
+        flex-direction: column-reverse;
     }
     main .About_Wrapper .About_Content .Abt_left {
         width: 100%;
@@ -1230,6 +1258,7 @@
     }
     main .Service_wrapper .Service_heading p {
         font-size: 14px;
+        width: 100%;
     }
     main .About_Wrapper .About_Content .Abt_left {
         width: 100%;
@@ -1237,18 +1266,19 @@
     }
     main .About_Wrapper::before {
         width: 100%;
-        height: 67%;
+        height: 42%;
     }
     main .About_Wrapper .About_Content .Abt_right {
         width: 100%;
         text-align: center;
     }
     main .About_Wrapper .About_Content .Abt_right img {
-        max-width: 48%;
+        max-width: 59%;
+        padding: 0 0 .5rem;
     }
     main .About_Wrapper .About_Content .Abt_right {
         width: 100%; 
-        padding: 2rem 0 0;
+        padding: 0rem 0 0;
     }
     main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure {
         width: 100%;
@@ -1302,13 +1332,7 @@
     }   
     main footer .copyright_wrp .copy_content{
         justify-content: center;
-    }
-    main footer .copyright_wrp .copy_content p { 
-        width: 100%;
-        text-align: center;
-        margin: .5rem 0;
-        padding: .5rem 0;
-    }
+    } 
     main footer .copyright_wrp {
         padding: 0.5rem 0;
         margin: 3rem 0 0; 
@@ -1627,10 +1651,39 @@
     .chat_img img {
         width: 29%;
     }
+    // ---map-----
+    .map {
+        width: 254px;
+        height: 228px; 
+        margin: 1rem 0 0;
+    }
+    div#map iframe {
+        width: 254px!important;
+        height: 228px;
+    }
+    // ----end--here----
 
 }
 
 @media only screen and (max-width:480px){
+
+    // map---
+    .map {
+        width: 100%;
+        height: 228px;
+        margin: 1rem 0 0;
+    }
+    div#map iframe {
+        width: 100%!important;
+        height: 228px;
+    }
+    .gm-control-active>img { 
+        width: 14px!important;
+        height: 14px!important;
+        filter: brightness(0.5);
+    }
+
+    // ---mapeend--
     header .Nav-wrp {
         width: 100%; 
         position: relative; 
@@ -1720,7 +1773,7 @@
         font-size: 1.5em;
     }
     main .About_Wrapper::before{
-        height: 61%;
+        height: 34%;
     }
     main .Appointment_Wrapper {
         padding: 0.5rem 0;
@@ -2094,7 +2147,7 @@
         font-size: 1.4em;
     }
     main .About_Wrapper::before {
-        height: 44%;
+        height: 22%;
         left: -111px;
         top: -93px;
     }
