--- a/css/style.css
+++ b/css/style.css
@@ -738,6 +738,7 @@ main .Service_wrapper .Service_heading p {
   line-height: 1.5;
   letter-spacing: 1px;
   word-spacing: 1px;
+  font-size: 1em;
 }
 
 main .Service_wrapper .Service_content .Grid_wrp {
@@ -1086,7 +1087,7 @@ main .About_Wrapper .About_Content {
 }
 
 main .About_Wrapper .About_Content .Abt_cmn01 h2 {
-  font-size: 3.2em;
+  font-size: 1.6em;
   letter-spacing: 1px;
   word-spacing: 1px;
   line-height: 1.5;
@@ -1099,11 +1100,11 @@ main .About_Wrapper .About_Content .Abt_cmn01 h2 span {
 }
 
 main .About_Wrapper .About_Content .Abt_cmn01 p {
-  font-size: 1.1em;
+  font-size: 1em;
   letter-spacing: 1px;
   word-spacing: 1px;
   line-height: 1.8;
-  padding: 1rem 0;
+  padding: .5rem 0;
 }
 
 main .About_Wrapper .About_Content .Abt_cmn01 a {
@@ -1131,7 +1132,7 @@ main .About_Wrapper .About_Content .Abt_right {
 }
 
 main .About_Wrapper .About_Content .Abt_right img {
-  max-width: 85%;
+  max-width: 100%;
 }
 
 @-webkit-keyframes bganime {
@@ -1672,6 +1673,10 @@ main footer .footer_content .Ft04 li p:first-child {
   font-family: 'open-sans';
 }
 
+main footer .footer_content .Ft03 {
+  display: none;
+}
+
 main footer .footer_content .Ft_cmn01 h2 {
   font-size: 1.6em;
   letter-spacing: 1px;
@@ -1837,13 +1842,35 @@ main footer .copyright_wrp .copy_content {
           justify-content: space-between;
 }
 
-main footer .copyright_wrp .copy_content p {
+main footer .copyright_wrp .copy_content .Ca2 {
+  text-align: right;
+}
+
+main footer .copyright_wrp .copy_content .Copycmn {
+  width: 48%;
+  color: #fff;
+}
+
+main footer .copyright_wrp .copy_content .Copycmn p, main footer .copyright_wrp .copy_content .Copycmn a {
   font-size: 13px;
-  line-height: 1px;
+  line-height: 1.5;
   letter-spacing: 1px;
   word-spacing: 1px;
   text-transform: capitalize;
   color: #fff;
+}
+
+main footer .copyright_wrp .copy_content .Copycmn a {
+  color: #fff;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main footer .copyright_wrp .copy_content .Copycmn a:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  opacity: .77;
+  text-decoration: underline;
 }
 
 @keyframes bganime {
@@ -3408,6 +3435,10 @@ main footer .copyright_wrp .copy_content p {
   word-spacing: 1px;
 }
 
+.Contact_US_Wrapper .Apt_heading {
+  text-align: center;
+}
+
 .Privacy-Wrapper .Privacy-content-wrp .slim-heading h2 {
   font-size: 1.8em;
 }
@@ -3507,6 +3538,22 @@ main footer .copyright_wrp .copy_content p {
 .BodyTreatment_Wrapper .hair-trn-Cnt01 p {
   padding: 0 0 0 0 !important;
   text-align: justify;
+}
+
+.map {
+  width: 401px;
+  height: 296px;
+  overflow: hidden;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 8px 1px #0000003d;
+          box-shadow: 0 0 8px 1px #0000003d;
+  -webkit-animation: imganime 3s linear infinite;
+          animation: imganime 3s linear infinite;
+}
+
+.gm-control-active > img {
+  -webkit-filter: brightness(0.5) !important;
+          filter: brightness(0.5) !important;
 }
 
 .main-bar {
@@ -3858,7 +3905,8 @@ main footer .copyright_wrp .copy_content p {
     padding: 1rem 0 1rem !important;
   }
   main .About_Wrapper::before {
-    width: 54%;
+    width: 80%;
+    height: 84%;
   }
   main header .top-social-bar .child-wrp .L_cmn01 p {
     font-size: 15px;
@@ -4250,6 +4298,9 @@ main footer .copyright_wrp .copy_content p {
     width: 100%;
     height: 100%;
   }
+  .Ca2 {
+    text-align: center !important;
+  }
   header .top-social-bar .child-wrp {
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
@@ -4392,7 +4443,8 @@ main footer .copyright_wrp .copy_content p {
     padding: 3rem 0 0;
   }
   main .About_Wrapper::before {
-    width: 65%;
+    width: 100%;
+    height: 72%;
   }
   main .Appointment_Form_wrp .Form_wrp form {
     width: 94%;
@@ -4630,9 +4682,31 @@ main footer .copyright_wrp .copy_content p {
   .breadcrumb {
     display: none !important;
   }
+  main footer .copyright_wrp .copy_content {
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    text-align: center;
+  }
+  main footer .copyright_wrp .copy_content .Copycmn {
+    width: 100%;
+    color: #fff;
+    padding: .5rem 0;
+  }
+  main footer .copyright_wrp {
+    padding: .5rem 0 .3rem;
+    margin: 3rem 0 0;
+  }
 }
 
 @media only screen and (max-width: 576px) {
+  main footer .copyright_wrp .copy_content p {
+    margin: .3rem 0;
+    padding: .0rem 0;
+  }
+  main footer .copyright_wrp .copy_content .Copycmn {
+    padding: 0rem 0;
+  }
   .Slimming_Wrapper .breadcumb-wrp {
     display: block;
   }
@@ -4713,6 +4787,10 @@ main footer .copyright_wrp .copy_content p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
   main .About_Wrapper .About_Content .Abt_left {
     width: 100%;
@@ -4731,6 +4809,7 @@ main footer .copyright_wrp .copy_content p {
   }
   main .Service_wrapper .Service_heading p {
     font-size: 14px;
+    width: 100%;
   }
   main .About_Wrapper .About_Content .Abt_left {
     width: 100%;
@@ -4738,18 +4817,19 @@ main footer .copyright_wrp .copy_content p {
   }
   main .About_Wrapper::before {
     width: 100%;
-    height: 67%;
+    height: 42%;
   }
   main .About_Wrapper .About_Content .Abt_right {
     width: 100%;
     text-align: center;
   }
   main .About_Wrapper .About_Content .Abt_right img {
-    max-width: 48%;
+    max-width: 59%;
+    padding: 0 0 .5rem;
   }
   main .About_Wrapper .About_Content .Abt_right {
     width: 100%;
-    padding: 2rem 0 0;
+    padding: 0rem 0 0;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure {
     width: 100%;
@@ -4809,12 +4889,6 @@ main footer .copyright_wrp .copy_content p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-  main footer .copyright_wrp .copy_content p {
-    width: 100%;
-    text-align: center;
-    margin: .5rem 0;
-    padding: .5rem 0;
   }
   main footer .copyright_wrp {
     padding: 0.5rem 0;
@@ -5149,9 +5223,33 @@ main footer .copyright_wrp .copy_content p {
   .chat_img img {
     width: 29%;
   }
+  .map {
+    width: 254px;
+    height: 228px;
+    margin: 1rem 0 0;
+  }
+  div#map iframe {
+    width: 254px !important;
+    height: 228px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .map {
+    width: 100%;
+    height: 228px;
+    margin: 1rem 0 0;
+  }
+  div#map iframe {
+    width: 100% !important;
+    height: 228px;
+  }
+  .gm-control-active > img {
+    width: 14px !important;
+    height: 14px !important;
+    -webkit-filter: brightness(0.5);
+            filter: brightness(0.5);
+  }
   header .Nav-wrp {
     width: 100%;
     position: relative;
@@ -5240,7 +5338,7 @@ main footer .copyright_wrp .copy_content p {
     font-size: 1.5em;
   }
   main .About_Wrapper::before {
-    height: 61%;
+    height: 34%;
   }
   main .Appointment_Wrapper {
     padding: 0.5rem 0;
@@ -5587,7 +5685,7 @@ main footer .copyright_wrp .copy_content p {
     font-size: 1.4em;
   }
   main .About_Wrapper::before {
-    height: 44%;
+    height: 22%;
     left: -111px;
     top: -93px;
   }
