--- a/css/style.css
+++ b/css/style.css
@@ -762,14 +762,14 @@ main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hv
   transition: all 0.3s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
+main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
   width: 245px;
   height: 245px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
+main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
   width: 245px;
   height: 245px;
   -webkit-transition: all .5s ease-in-out;
@@ -802,37 +802,37 @@ main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-cont
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-}
-
-main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt {
-  text-align: center;
   position: relative;
 }
 
-main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content::before {
   content: '';
   width: 0px;
   height: 0px;
   position: absolute;
-  left: -100px;
-  top: -213px;
+  left: 23px;
+  top: 23px;
   border-top: 2px solid #fff;
   border-left: 2px solid #fff;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content::after {
   content: '';
   width: 0px;
   height: 0px;
   position: absolute;
-  right: -100px;
-  bottom: -213px;
+  right: 23px;
+  bottom: 23px;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
+}
+
+main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt {
+  text-align: center;
 }
 
 main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt h2 {
@@ -979,31 +979,31 @@ main .Service_wrapper .Service_content .Grid-item5 {
   grid-area: e;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001:hover .Hvr_cnt::before {
+main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::before {
   width: 131px !important;
   height: 131px !important;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001:hover .Hvr_cnt::after {
+main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::after {
   width: 131px !important;
   height: 131px !important;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-  left: -100px !important;
-  top: -60px !important;
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content::before {
+  left: 18px !important;
+  top: 15px !important;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-  right: -100px !important;
-  bottom: -61px !important;
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content::after {
+  right: 18px !important;
+  bottom: 18px !important;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt h2 {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content h2 {
   font-size: 1.9em;
   line-height: 1.5;
   letter-spacing: 1px;
@@ -1011,7 +1011,7 @@ main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt
   color: #fff;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt p {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content p {
   font-size: 1em;
   line-height: 1.5;
   letter-spacing: 1px;
@@ -1020,7 +1020,7 @@ main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt
   padding: 1rem 0;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt a {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content a {
   display: inline-block;
   padding: .9rem 1.8rem;
   border-radius: 5px;
@@ -1032,19 +1032,19 @@ main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt
   z-index: 5;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt a:hover {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content a:hover {
   color: #F73624;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   font-weight: bold;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt .hvr-radial-out {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .hvr-radial-out {
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
-main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt .hvr-radial-out::before {
+main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .hvr-radial-out::before {
   background: #fff;
 }
 
@@ -2331,14 +2331,14 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
   transition: all 0.3s ease-in-out;
 }
 
-.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
+.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
   width: 90px;
   height: 90px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
+.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
   width: 90px;
   height: 90px;
   -webkit-transition: all .5s ease-in-out;
@@ -2371,37 +2371,37 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-}
-
-.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt {
-  text-align: center;
   position: relative;
 }
 
-.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content::before {
   content: '';
   width: 0px;
   height: 0px;
   position: absolute;
-  left: -30px;
-  top: -63px;
+  left: 17px;
+  top: 17px;
   border-top: 2px solid #fff;
   border-left: 2px solid #fff;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
-.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content::after {
   content: '';
   width: 0px;
   height: 0px;
   position: absolute;
-  right: -30px;
-  bottom: -63px;
+  right: 17px;
+  bottom: 17px;
   border-bottom: 2px solid #fff;
   border-right: 2px solid #fff;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
+}
+
+.Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt {
+  text-align: center;
 }
 
 .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt h2 {
@@ -3565,11 +3565,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-size: 1em !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -58px;
+    left: 2px;
     top: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -62px;
+    right: 2px;
     bottom: -213px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -3581,11 +3581,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-weight: 550;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -53px !important;
+    left: -35px !important;
     top: -60px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -56px !important;
+    right: -35px !important;
     bottom: -61px !important;
   }
   main header .Nav-wrp nav .nav-item ul .drop_down {
@@ -3648,19 +3648,19 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-size: 15px !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -39px;
+    left: 22px;
     top: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -41px;
+    right: 22px;
     bottom: -213px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -42px !important;
-    top: -60px !important;
+    left: -15px !important;
+    top: -61px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -45px !important;
+    right: -15px !important;
     bottom: -61px !important;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
@@ -3917,11 +3917,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
         grid-template-areas: "a a b b"  "a a c c" "d d e e  ";
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -83px !important;
+    left: -59px  !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -83px !important;
+    right: -59px  !important;
     bottom: -64px !important;
   }
   header .Nav-wrp nav .nav-item .Unorder_wrp .drop_down {
@@ -3932,11 +3932,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     height: 150px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -79px;
+    left: -21px;
     top: -214px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -81px;
+    right: -21px;
     bottom: -210px;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content {
@@ -4344,8 +4344,8 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     padding: .1rem 0 .5rem;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -21px;
-    top: -218px;
+    left: 19px;
+    top: -206px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
     width: 110px;
@@ -4356,15 +4356,15 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     height: 110px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -23px;
-    bottom: -215px;
+    right: 19px;
+    bottom: -206px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -21px !important;
+    left: -2px !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -24px !important;
+    right: -2px !important;
     bottom: -63px !important;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
@@ -4756,7 +4756,7 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
         grid-template-areas: "a a a a" "b b b b" "c c c c" "d d d d" "e e e e ";
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -103px;
+    left: -48px;
     top: -214px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -4768,15 +4768,15 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     height: 180px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -105px;
+    right: -48px;
     bottom: -215px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -105px !important;
+    left: -81px  !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -108px !important;
+    right: -81px  !important;
     bottom: -63px !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt a {
@@ -5235,6 +5235,14 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
 }
 
 @media only screen and (max-width: 480px) {
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
+    width: 150px;
+    height: 150px;
+  }
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
+    width: 150px;
+    height: 150px;
+  }
   .map {
     width: 100%;
     height: 228px;
@@ -5307,11 +5315,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-size: 13px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -62px;
+    left: -8px;
     top: -114px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -58px;
+    right: -8px;
     bottom: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -5327,11 +5335,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     bottom: -112px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -62px !important;
+    left: -40px !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -64px !important;
+    right: -40px !important;
     bottom: -64px !important;
   }
   main .About_Wrapper .About_Content .Abt_cmn01 h2 {
@@ -5584,11 +5592,11 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
 
 @media only screen and (max-width: 414px) {
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -32px;
+    left: 21px;
     top: -114px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -35px;
+    right: 21px;
     bottom: -112px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
@@ -5599,9 +5607,33 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     width: 130px;
     height: 130px;
   }
+  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
+    left: -14px !important;
+    top: -62px !important;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
+    right: -14px !important;
+    bottom: -64px !important;
+  }
 }
 
 @media only screen and (max-width: 375px) {
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::before {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::after {
+    width: 100px;
+    height: 100px;
+  }
   header .Nav-wrp nav .logo {
     width: 60%;
   }
@@ -5651,8 +5683,8 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-size: 13px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -17px;
-    top: -81px;
+    left: 14px;
+    top: -79px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
     width: 100px;
@@ -5663,8 +5695,8 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     height: 100px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -19px;
-    bottom: -86px;
+    right: 14px;
+    bottom: -79px;
   }
   main .Service_wrapper .Service_content .Grid-item1 {
     height: 340px;
@@ -5674,12 +5706,12 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
     font-size: 14px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -17px !important;
-    top: -66px !important;
+    left: -4px !important;
+    top: -72px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -18px !important;
-    bottom: -64px !important;
+    right: -4px !important;
+    bottom: -72px !important;
   }
   main .About_Wrapper .About_Content .Abt_cmn01 h2 {
     font-size: 1.4em;
