--- a/css/media.css
+++ b/css/media.css
@@ -3,11 +3,11 @@
     font-size: 1em !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -58px;
+    left: 2px;
     top: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -62px;
+    right: 2px;
     bottom: -213px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -19,11 +19,11 @@
     font-weight: 550;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -53px !important;
+    left: -35px !important;
     top: -60px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -56px !important;
+    right: -35px !important;
     bottom: -61px !important;
   }
   main header .Nav-wrp nav .nav-item ul .drop_down {
@@ -86,19 +86,19 @@
     font-size: 15px !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -39px;
+    left: 22px;
     top: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -41px;
+    right: 22px;
     bottom: -213px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -42px !important;
-    top: -60px !important;
+    left: -15px !important;
+    top: -61px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -45px !important;
+    right: -15px !important;
     bottom: -61px !important;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
@@ -355,11 +355,11 @@
         grid-template-areas: "a a b b"  "a a c c" "d d e e  ";
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -83px !important;
+    left: -59px  !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -83px !important;
+    right: -59px  !important;
     bottom: -64px !important;
   }
   header .Nav-wrp nav .nav-item .Unorder_wrp .drop_down {
@@ -370,11 +370,11 @@
     height: 150px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -79px;
+    left: -21px;
     top: -214px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -81px;
+    right: -21px;
     bottom: -210px;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content {
@@ -782,8 +782,8 @@
     padding: .1rem 0 .5rem;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -21px;
-    top: -218px;
+    left: 19px;
+    top: -206px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
     width: 110px;
@@ -794,15 +794,15 @@
     height: 110px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -23px;
-    bottom: -215px;
+    right: 19px;
+    bottom: -206px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -21px !important;
+    left: -2px !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -24px !important;
+    right: -2px !important;
     bottom: -63px !important;
   }
   main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 figure img {
@@ -1194,7 +1194,7 @@
         grid-template-areas: "a a a a" "b b b b" "c c c c" "d d d d" "e e e e ";
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -103px;
+    left: -48px;
     top: -214px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -1206,15 +1206,15 @@
     height: 180px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -105px;
+    right: -48px;
     bottom: -215px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -105px !important;
+    left: -81px  !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -108px !important;
+    right: -81px  !important;
     bottom: -63px !important;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt a {
@@ -1673,6 +1673,14 @@
 }
 
 @media only screen and (max-width: 480px) {
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
+    width: 150px;
+    height: 150px;
+  }
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
+    width: 150px;
+    height: 150px;
+  }
   .map {
     width: 100%;
     height: 228px;
@@ -1745,11 +1753,11 @@
     font-size: 13px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -62px;
+    left: -8px;
     top: -114px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -58px;
+    right: -8px;
     bottom: -215px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
@@ -1765,11 +1773,11 @@
     bottom: -112px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -62px !important;
+    left: -40px !important;
     top: -62px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -64px !important;
+    right: -40px !important;
     bottom: -64px !important;
   }
   main .About_Wrapper .About_Content .Abt_cmn01 h2 {
@@ -2022,11 +2030,11 @@
 
 @media only screen and (max-width: 414px) {
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -32px;
+    left: 21px;
     top: -114px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -35px;
+    right: 21px;
     bottom: -112px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::after {
@@ -2037,9 +2045,33 @@
     width: 130px;
     height: 130px;
   }
+  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
+    left: -14px !important;
+    top: -62px !important;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
+    right: -14px !important;
+    bottom: -64px !important;
+  }
 }
 
 @media only screen and (max-width: 375px) {
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::before {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content::after {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::before {
+    width: 100px;
+    height: 100px;
+  }
+  main .Service_wrapper .Service_content .Grid__hvr0001:hover .grid-hvr-content::after {
+    width: 100px;
+    height: 100px;
+  }
   header .Nav-wrp nav .logo {
     width: 60%;
   }
@@ -2089,8 +2121,8 @@
     font-size: 13px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
-    left: -17px;
-    top: -81px;
+    left: 14px;
+    top: -79px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
     width: 100px;
@@ -2101,8 +2133,8 @@
     height: 100px;
   }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
-    right: -19px;
-    bottom: -86px;
+    right: 14px;
+    bottom: -79px;
   }
   main .Service_wrapper .Service_content .Grid-item1 {
     height: 340px;
@@ -2112,12 +2144,12 @@
     font-size: 14px;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::before {
-    left: -17px !important;
-    top: -66px !important;
+    left: -4px !important;
+    top: -72px !important;
   }
   main .Service_wrapper .Service_content .Grid__hvr0001 .grid-hvr-content .Hvr_cnt::after {
-    right: -18px !important;
-    bottom: -64px !important;
+    right: -4px !important;
+    bottom: -72px !important;
   }
   main .About_Wrapper .About_Content .Abt_cmn01 h2 {
     font-size: 1.4em;
