--- a/css/style.scss
+++ b/css/style.scss
@@ -2718,7 +2718,9 @@
 // ----
 
 
-
+.HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 figure img {
+    max-width: 100% !important;
+}
 
 .main-bar{
     display: none;
