--- a/css/style.css
+++ b/css/style.css
@@ -3556,6 +3556,10 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
           filter: brightness(0.5) !important;
 }
 
+.HairTransplant_Wrapper .Hair-Trt-Bfr .hair-trn-Cnt01 figure img {
+  max-width: 100% !important;
+}
+
 .main-bar {
   display: none;
 }
@@ -3697,6 +3701,9 @@ main footer .copyright_wrp .copy_content .Copycmn a:hover {
 }
 
 @media only screen and (max-width: 1200px) {
+  main header .Nav-wrp nav .nav-item ul li a {
+    font-size: 14px !important;
+  }
   main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01:hover .grid-hvr-content .Hvr_cnt::before {
     width: 185px;
     height: 185px;
